--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,9 @@
 body {
   background: #edf0f1;
   padding: 80px 0 0 0;
+  min-width: 500px;
+  min-height: 500px;
+  position: relative;
 }
 
 body, input, button {
