--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ header {
   left: 0;
   z-index: 5;
 
-  background: #25b99a;
+  background: orange;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
